@@ -133,7 +133,7 @@ bool OSDMenuKeyboard_EventHandler(word *event, dword *param1, dword *param2)
             {
               case 26:
               {
-                if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize)
+                if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize - 1)
                 {
                   InsertAt(OSDMenuKeyboard_StringVar, OSDMenuKeyboard_CursorPosition, " ");
                   OSDMenuKeyboard_CursorPosition++;
@@ -158,7 +158,7 @@ bool OSDMenuKeyboard_EventHandler(word *event, dword *param1, dword *param2)
 
               default:
               {
-                if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize)
+                if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize - strlen(Keypad[KeyPadMode][KeyPadPosition]))
                 {
                   InsertAt(OSDMenuKeyboard_StringVar, OSDMenuKeyboard_CursorPosition, Keypad[KeyPadMode][KeyPadPosition]);
                   OSDMenuKeyboard_CursorPosition++;
@@ -220,8 +220,8 @@ bool OSDMenuKeyboard_EventHandler(word *event, dword *param1, dword *param2)
 
           case RKEY_Yellow:     //Add *text*
           {
-            if((strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize) && (OSDMenuKeyboard_StringVar[0] != '*')) InsertAt(OSDMenuKeyboard_StringVar, 0, "*");
-            if((strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize) && (OSDMenuKeyboard_StringVar[strlen(OSDMenuKeyboard_StringVar) - 1] != '*')) strcat(OSDMenuKeyboard_StringVar, "*");
+            if((strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize - 1) && (OSDMenuKeyboard_StringVar[0] != '*')) InsertAt(OSDMenuKeyboard_StringVar, 0, "*");
+            if((strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize - 1) && (OSDMenuKeyboard_StringVar[strlen(OSDMenuKeyboard_StringVar) - 1] != '*')) strcat(OSDMenuKeyboard_StringVar, "*");
             OSDMenuKeyboard_Draw();
             break;
           }
@@ -325,16 +325,17 @@ bool OSDMenuKeyboard_EventHandler(word *event, dword *param1, dword *param2)
             //ASCII Codes
             if((*param1 < 0x100) && (((*param1 >= 0x20) && (*param1 < 0x7f)) || (*param1 >= 0xa0)))
             {
-              if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize)
-              {
-                char          ToBeInserted[8];
+              char          ToBeInserted[8];
 
-                ToBeInserted[0] = *param1;
-                ToBeInserted[1] = '\0';
-                ToBeInserted[2] = '\0';
-                ToBeInserted[3] = '\0';
-                ToBeInserted[4] = '\0';
-                StrMkUTF8(ToBeInserted, 9);
+              ToBeInserted[0] = *param1;
+              ToBeInserted[1] = '\0';
+              ToBeInserted[2] = '\0';
+              ToBeInserted[3] = '\0';
+              ToBeInserted[4] = '\0';
+              StrMkUTF8(ToBeInserted, 9);
+
+              if(strlen(OSDMenuKeyboard_StringVar) < OSDMenuKeyboard_StringMaxSize - strlen(ToBeInserted))
+              {
                 InsertAt(OSDMenuKeyboard_StringVar, OSDMenuKeyboard_CursorPosition, ToBeInserted);
                 OSDMenuKeyboard_CursorPosition++;
                 OSDMenuKeyboard_Draw();
