@@ -1126,3 +1126,4 @@ The following functions accept any form a path. The INI and language INI functio
             Modified: Increase the maximum length of keyboard button texts from 19 to 22
             Modified: Increase the width for keyboard buttons and texts by 2 px (so as not to waste space)
             Modified: Enable the edited text to spread wider, so that there is the same spacing to the left and right
+            Fixed: Potential string overflow (OSDMenuKeyboard_StringVar)
